--- a/StudentAggrementForm3/MainWindow.xaml
+++ b/StudentAggrementForm3/MainWindow.xaml
@@ -5,8 +5,93 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentAggrementForm3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MainWindow" Height="500" Width="800">
+    <Grid Background="PaleGreen">
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="2*"></RowDefinition>
+            <RowDefinition Height="3*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Row="0" Grid.Column="0" Background="SpringGreen" Margin="10,10,10,0">
+            <Label Content="Student information" FontFamily="Comic Sans MS" FontSize="14" Width="160"
+                   Height="30" HorizontalAlignment="Left" VerticalAlignment="Top">
+            </Label>
+            <StackPanel Orientation="Horizontal" Margin="5,30,0,0">
+                <StackPanel Orientation="Vertical">
+                    <Label Content="Fullname" FontFamily="Comic Sans MS" FontSize="14" Width="160" Margin="0,0,0,0"
+                   Height="30">
+                    </Label>
+                    <Label Content="Phone" FontFamily="Comic Sans MS" FontSize="14" Width="160" Margin="0,5,0,0"
+                   Height="30">
+                    </Label>
+                    <Label Content="Document NO" FontFamily="Comic Sans MS" FontSize="14" Width="160" Margin="0,5,0,0"
+                   Height="30">
+                    </Label>
+                    <Label Content="FIN" FontFamily="Comic Sans MS" FontSize="14" Width="160" Margin="0,5,0,0"
+                   Height="30">
+                    </Label>
+                </StackPanel>
+                <StackPanel Orientation="Vertical">
+                    <TextBox Width="160" Height="30" Background="PaleGreen" Margin="0,0,0,0" FontSize="14"
+                             FontFamily="Comic Sans Ms">
+                        
+                    </TextBox>
+                    <TextBox Width="160" Height="30" Background="PaleGreen" Margin="0,5,0,0" FontSize="14"
+                             FontFamily="Comic Sans Ms">
+
+                    </TextBox>
+                    <TextBox Width="160" Height="30" Background="PaleGreen" Margin="0,5,0,0" FontSize="14" MaxLength="10"
+                            
+                             FontFamily="Comic Sans Ms">
+                    </TextBox>
+                    <TextBox Width="160" Height="30" Background="PaleGreen" Margin="0,5,0,0" FontSize="14" MaxLength="8"
+                             FontFamily="Comic Sans Ms">
+
+                    </TextBox>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="0" Grid.Column="1" Background="SpringGreen" Margin="10,10,10,0">
+
+            <Label Width="160" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Special information"
+                   FontFamily="Comic  Sans MS" FontSize="15">
+            </Label>
+
+
+            <StackPanel Orientation="Horizontal">
+                <StackPanel Orientation="Vertical">
+                    <Label Width="160" Height="35" FontSize="14" FontFamily="Comic Sans MS" Margin="5,30,0,0"
+                          Content="Username" >
+                        
+                    </Label>
+                    <Label Width="160" Height="35" FontSize="14" FontFamily="Comic Sans MS" Margin="5,10,0,0"
+                          Content="Group" >
+
+                    </Label>
+                    <Label Width="160" Height="35" FontSize="14" FontFamily="Comic Sans MS" Margin="5,10,0,0"
+                          Content="Service type" >
+
+                    </Label>
+                </StackPanel>
+
+                <StackPanel Orientation="Vertical">
+                    <TextBox Width="160" Height="30" Background="PaleGreen" FontSize="14" FontFamily="Comic Sans MS"
+                            Margin="5,30,0,0" >
+                        
+                    </TextBox>
+                </StackPanel>
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Row="1" Grid.Column="0" Background="SpringGreen" Margin="10" Grid.ColumnSpan="2">
+
+        </Grid>
+     
+
     </Grid>
 </Window>
